<resources>
    <string name="app_name">queen</string>

    <string name="modify">수정하기</string>
    <string name="save">저장</string>

    <string name="navi_title_patient">환자 차트</string>
    <string name="navi_title_study">공부</string>

    <string name="chart_num_title">차트 번호 : </string>
    <string name="patient_name_title">환자 이름 : </string>
    <string name="btn_add_text">추가하기</string>
    <string name="save_success">저장을 완료하였습니다.</string>

    <!--PatientDetail-->
    <string name="btn_add_img_text">이미지 추가하기</string>
    <string name="btn_add_chart_text">차트 추가하기</string>

    <!--AddPatientChart-->
    <string name="add_patient_chart_hint">차트 번호를 입력하세요</string>
    <string name="add_patient_chart_content">내용을 입력하세요.</string>

    <!--error-->
    <string name="not_found_patient_err">환자가 존재하지 않습니다.</string>
    <string name="not_found_patient_chart_err">환자가 차트가 존재하지 않습니다.</string>

    <string name="patient_empty_text">환자 리스트가 존재하지 않습니다.\n차트를 추가해보세요 👀</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--환자 차트 리스트-->
    <string name="patient_chart_title_hint">차트 타이틀입니다.</string>
</resources>